- Fixed: Console window would sometimes remain in partially active state after piping commands

--- Version 0.5.1 - Aug-04-2009
- Support compilation on Windows
- Add framework for automated plugin testing, and some first plugin tests
- New command line option "--evaluate <Rcode>" mostly for the purpose of automated testing
- Remove support for R 2.6.x and earlier
- Add basic checks for a correct installation of the RKWard resource files
- Remove "What to expect" dialog at startup
- Make keyboard shorcuts configurable
- Add option to add only single line commands from script editor to the console history
- Add action to change working directory to that of the current script file
- Fixed: No warning was shown, when an open script file was changed on disk, externally
- Fixed: Opening most file types (e.g. PDF) from the help browser was broken
- Fixed: Make built-in editor work again for file.edit ()
- More plugins now write a header to the output window
- Add convenience function "makeHeaderCode()" for use inside plugins
- Adjust some icons
- Plugins can be invoked from R code (mostly for internal purposes)
- Add "Run again" link for plugin generated output
- Fixed: All objects in .Globalenv would be revisited if a single object was added / removed
- Fixed: Screen device in rkward was not seen as interactive by R

--- Version 0.5.0d - May-10-2009
- Fixed: Container of detached windows would sometimes remain after reattaching
- Fixed: Global toolbar style was not honored
- Fixed: Auto-scroll missing in progress dialogs and data editor
- Fix jumping toolbar
- Fixed: Several harmless warnings were silenced
- Fixed: Argument hints would always stay on top regardless of focus
- Fix crash when reaching bottom of command history in context sensitive search
- Fix crash while inserting rows in a data.frame with string variables

--- Version 0.5.0c - Mar-30-2009
- Fix assorted installation problems
- Updated translations: German, Spanish