@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="rkward" version="0.5.1">
+<kpartgui name="rkward" version="52">
 	<MenuBar>
 		<Merge/>
 		<Menu name="window"><text>&amp;Window</text>
@@ -20,6 +20,7 @@
 		</Menu>
 		<Menu name="settings"><text>&amp;Settings</text>
 			<Action name="options_configure_keybinding"/>
+			<Action name="options_configure_toolbars"/>
 		</Menu>
 		<Menu name="help"><text>&amp;Help</text>
 			<Action name="rkward_help" group="prehelp_actions_merge"/>
